libasn1parser/asn1p_y.output
Terminals which are not used

   TOK_ABSTRACT_SYNTAX
   TOK_ENCODED
   TOK_MINUS_INFINITY
   TOK_PLUS_INFINITY
   TOK_TYPE_IDENTIFIER
   "concrete TypeDeclaration"


State 226 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 1 shift/reduce
State 319 conflicts: 2 reduce/reduce


Grammar

    0 $accept: ParsedGrammar $end

    1 ParsedGrammar: "UTF-8 byte order mark" ModuleList
    2              | ModuleList

    3 ModuleList: ModuleDefinition
    4           | ModuleList ModuleDefinition

    5 @1: /* empty */

    6 ModuleDefinition: TypeRefName @1 optObjectIdentifier TOK_DEFINITIONS optModuleDefinitionFlags TOK_PPEQ TOK_BEGIN optModuleBody TOK_END

    7 optObjectIdentifier: /* empty */
    8                    | ObjectIdentifier

    9 ObjectIdentifier: '{' ObjectIdentifierBody '}'
   10                 | '{' '}'

   11 ObjectIdentifierBody: ObjectIdentifierElement
   12                     | ObjectIdentifierBody ObjectIdentifierElement

   13 ObjectIdentifierElement: Identifier
   14                        | Identifier '(' "number" ')'
   15                        | "number"

   16 optModuleDefinitionFlags: /* empty */
   17                         | ModuleDefinitionFlags

   18 ModuleDefinitionFlags: ModuleDefinitionFlag
   19                      | ModuleDefinitionFlags ModuleDefinitionFlag

   20 ModuleDefinitionFlag: TOK_EXPLICIT TOK_TAGS
   21                     | TOK_IMPLICIT TOK_TAGS
   22                     | TOK_AUTOMATIC TOK_TAGS
   23                     | TOK_EXTENSIBILITY TOK_IMPLIED
   24                     | TOK_capitalreference TOK_INSTRUCTIONS

   25 optModuleBody: /* empty */
   26              | ModuleBody

   27 ModuleBody: optExports optImports AssignmentList

   28 AssignmentList: Assignment
   29               | AssignmentList Assignment

   30 Assignment: DataTypeReference
   31           | ValueAssignment
   32           | ValueSetTypeAssignment

   33 @2: /* empty */

   34 Assignment: TOK_ENCODING_CONTROL TOK_capitalreference @2
   35           | BasicString

   36 optImports: /* empty */
   37           | ImportsDefinition

   38 ImportsDefinition: TOK_IMPORTS optImportsBundleSet ';'
   39                  | TOK_IMPORTS TOK_FROM

   40 optImportsBundleSet: /* empty */
   41                    | ImportsBundleSet

   42 ImportsBundleSet: ImportsBundle
   43                 | ImportsBundleSet ImportsBundle

   44 AssignedIdentifier: /* empty */
   45                   | ObjectIdentifier

   46 ImportsBundle: ImportsList TOK_FROM TypeRefName AssignedIdentifier optWithSuccessors

   47 optWithSuccessors: /* empty */
   48                  | TOK_WITH TOK_SUCCESSORS

   49 ImportsList: ImportsElement
   50            | ImportsList ',' ImportsElement

   51 ImportsElement: TypeRefName
   52               | TypeRefName '{' '}'
   53               | Identifier

   54 optExports: /* empty */
   55           | ExportsDefinition

   56 ExportsDefinition: TOK_EXPORTS ExportsBody ';'
   57                  | TOK_EXPORTS TOK_ALL ';'
   58                  | TOK_EXPORTS ';'

   59 ExportsBody: ExportsElement
   60            | ExportsBody ',' ExportsElement

   61 ExportsElement: TypeRefName
   62               | TypeRefName '{' '}'
   63               | Identifier

   64 ValueSet: '{' ElementSetSpecs '}'

   65 ValueSetTypeAssignment: TypeRefName Type TOK_PPEQ ValueSet

   66 DefinedType: ComplexTypeReference
   67            | ComplexTypeReference '{' ActualParameterList '}'

   68 DataTypeReference: TypeRefName TOK_PPEQ Type
   69                  | TypeRefName TOK_PPEQ ObjectClass
   70                  | TypeRefName '{' ParameterArgumentList '}' TOK_PPEQ Type
   71                  | TypeRefName '{' ParameterArgumentList '}' TOK_PPEQ ObjectClass

   72 ParameterArgumentList: ParameterArgumentName
   73                      | ParameterArgumentList ',' ParameterArgumentName

   74 ParameterArgumentName: TypeRefName
   75                      | TypeRefName ':' Identifier
   76                      | TypeRefName ':' TypeRefName
   77                      | BasicTypeId ':' Identifier
   78                      | BasicTypeId ':' TypeRefName

   79 ActualParameterList: ActualParameter
   80                    | ActualParameterList ',' ActualParameter

   81 ActualParameter: UntaggedType
   82                | SimpleValue
   83                | DefinedValue
   84                | ValueSet

   85 optComponentTypeLists: /* empty */
   86                      | ComponentTypeLists

   87 ComponentTypeLists: ComponentType
   88                   | ComponentTypeLists ',' ComponentType
   89                   | ComponentTypeLists ',' TOK_VBracketLeft ComponentTypeLists TOK_VBracketRight

   90 ComponentType: Identifier MaybeIndirectTaggedType optMarker
   91              | MaybeIndirectTaggedType optMarker
   92              | TOK_COMPONENTS TOK_OF MaybeIndirectTaggedType
   93              | ExtensionAndException

   94 AlternativeTypeLists: AlternativeType
   95                     | AlternativeTypeLists ',' AlternativeType
   96                     | AlternativeTypeLists ',' TOK_VBracketLeft AlternativeTypeLists TOK_VBracketRight

   97 AlternativeType: Identifier MaybeIndirectTaggedType
   98                | ExtensionAndException
   99                | MaybeIndirectTaggedType

  100 ObjectClass: TOK_CLASS '{' FieldSpec '}' optWithSyntax

  101 optUNIQUE: /* empty */
  102          | TOK_UNIQUE

  103 FieldSpec: ClassField
  104          | FieldSpec ',' ClassField

  105 ClassField: TOK_typefieldreference optMarker
  106           | TOK_valuefieldreference Type optUNIQUE optMarker
  107           | TOK_valuefieldreference FieldName optMarker
  108           | TOK_valuefieldreference DefinedObjectClass optMarker
  109           | TOK_typefieldreference FieldName optMarker
  110           | TOK_typefieldreference Type optMarker
  111           | TOK_typefieldreference DefinedObjectClass optMarker

  112 optWithSyntax: /* empty */
  113              | WithSyntax

  114 @3: /* empty */

  115 WithSyntax: TOK_WITH TOK_SYNTAX '{' @3 WithSyntaxList '}'

  116 WithSyntaxList: WithSyntaxToken
  117               | WithSyntaxList WithSyntaxToken

  118 WithSyntaxToken: TOK_whitespace
  119                | TOK_Literal
  120                | PrimitiveFieldReference
  121                | '[' WithSyntaxList ']'

  122 ExtensionAndException: "..."
  123                      | "..." '!' DefinedValue
  124                      | "..." '!' SignedNumber

  125 Type: TaggedType

  126 TaggedType: optTag UntaggedType

  127 DefinedUntaggedType: DefinedType optManyConstraints

  128 UntaggedType: TypeDeclaration optManyConstraints

  129 MaybeIndirectTaggedType: optTag MaybeIndirectTypeDeclaration optManyConstraints

  130 NSTD_IndirectMarker: /* empty */

  131 MaybeIndirectTypeDeclaration: NSTD_IndirectMarker TypeDeclaration

  132 TypeDeclaration: ConcreteTypeDeclaration
  133                | DefinedType

  134 ConcreteTypeDeclaration: BuiltinType
  135                        | TOK_CHOICE '{' AlternativeTypeLists '}'
  136                        | TOK_SEQUENCE '{' optComponentTypeLists '}'
  137                        | TOK_SET '{' optComponentTypeLists '}'
  138                        | TOK_SEQUENCE optSizeOrConstraint TOK_OF optIdentifier optTag MaybeIndirectTypeDeclaration
  139                        | TOK_SET optSizeOrConstraint TOK_OF optIdentifier optTag MaybeIndirectTypeDeclaration
  140                        | TOK_ANY
  141                        | TOK_ANY TOK_DEFINED TOK_BY Identifier
  142                        | TOK_INSTANCE TOK_OF ComplexTypeReference

  143 ComplexTypeReference: TOK_typereference
  144                     | TOK_capitalreference
  145                     | TOK_typereference '.' TypeRefName
  146                     | TOK_capitalreference '.' TypeRefName
  147                     | TOK_capitalreference '.' ComplexTypeReferenceAmpList

  148 ComplexTypeReferenceAmpList: ComplexTypeReferenceElement
  149                            | ComplexTypeReferenceAmpList '.' ComplexTypeReferenceElement

  150 ComplexTypeReferenceElement: PrimitiveFieldReference

  151 PrimitiveFieldReference: TOK_typefieldreference
  152                        | TOK_valuefieldreference

  153 FieldName: TOK_typefieldreference
  154          | FieldName '.' TOK_typefieldreference
  155          | FieldName '.' TOK_valuefieldreference

  156 DefinedObjectClass: TOK_capitalreference

  157 ValueAssignment: Identifier Type TOK_PPEQ Value

  158 Value: SimpleValue
  159      | DefinedValue

  160 @4: /* empty */

  161 Value: '{' @4 Opaque

  162 SimpleValue: TOK_NULL
  163            | TOK_FALSE
  164            | TOK_TRUE
  165            | SignedNumber
  166            | RealValue
  167            | RestrictedCharacterStringValue
  168            | BitStringValue

  169 DefinedValue: IdentifierAsValue
  170             | TypeRefName '.' Identifier

  171 RestrictedCharacterStringValue: TOK_cstring
  172                               | TOK_tuple
  173                               | TOK_quadruple

  174 Opaque: OpaqueFirstToken
  175       | Opaque TOK_opaque

  176 OpaqueFirstToken: TOK_opaque
  177                 | Identifier

  178 BasicTypeId: TOK_BOOLEAN
  179            | TOK_NULL
  180            | TOK_REAL
  181            | TOK_OCTET TOK_STRING
  182            | TOK_OBJECT TOK_IDENTIFIER
  183            | TOK_RELATIVE_OID
  184            | TOK_EXTERNAL
  185            | TOK_EMBEDDED TOK_PDV
  186            | TOK_CHARACTER TOK_STRING
  187            | TOK_UTCTime
  188            | TOK_GeneralizedTime
  189            | BasicString
  190            | BasicTypeId_UniverationCompatible

  191 BasicTypeId_UniverationCompatible: TOK_INTEGER
  192                                  | TOK_ENUMERATED
  193                                  | TOK_BIT TOK_STRING

  194 BuiltinType: BasicTypeId
  195            | TOK_INTEGER '{' NamedNumberList '}'
  196            | TOK_ENUMERATED '{' Enumerations '}'
  197            | TOK_BIT TOK_STRING '{' NamedBitList '}'
  198            | TOK_ExtValue_BIT_STRING '{' IdentifierList '}'
  199            | TOK_ExtValue_BIT_STRING '{' '}'

  200 BasicString: TOK_BMPString
  201            | TOK_GeneralString
  202            | TOK_GraphicString
  203            | TOK_IA5String
  204            | TOK_ISO646String
  205            | TOK_NumericString
  206            | TOK_PrintableString
  207            | TOK_T61String
  208            | TOK_TeletexString
  209            | TOK_UniversalString
  210            | TOK_UTF8String
  211            | TOK_VideotexString
  212            | TOK_VisibleString
  213            | TOK_ObjectDescriptor

  214 UnionMark: '|'
  215          | TOK_UNION

  216 IntersectionMark: '^'
  217                 | TOK_INTERSECTION

  218 optConstraint: /* empty */
  219              | Constraint

  220 optManyConstraints: /* empty */
  221                   | ManyConstraints

  222 optSizeOrConstraint: /* empty */
  223                    | Constraint
  224                    | SizeConstraint

  225 Constraint: '(' ConstraintSpec ')'

  226 ManyConstraints: Constraint
  227                | ManyConstraints Constraint

  228 ConstraintSpec: SubtypeConstraint
  229               | GeneralConstraint

  230 SubtypeConstraint: ElementSetSpecs

  231 ElementSetSpecs: "..."
  232                | ElementSetSpec
  233                | ElementSetSpec ',' "..."
  234                | ElementSetSpec ',' "..." ',' ElementSetSpec

  235 ElementSetSpec: Unions
  236               | TOK_ALL TOK_EXCEPT Elements

  237 Unions: Intersections
  238       | Unions UnionMark Intersections

  239 Intersections: IntersectionElements
  240              | Intersections IntersectionMark IntersectionElements

  241 IntersectionElements: Elements
  242                     | Elements TOK_EXCEPT Elements

  243 Elements: SubtypeElements
  244         | '(' ElementSetSpec ')'

  245 SubtypeElements: SingleValue
  246                | ContainedSubtype
  247                | PermittedAlphabet
  248                | SizeConstraint
  249                | InnerTypeConstraints
  250                | PatternConstraint
  251                | ValueRange

  252 PermittedAlphabet: TOK_FROM Constraint

  253 SizeConstraint: TOK_SIZE Constraint

  254 PatternConstraint: TOK_PATTERN TOK_cstring
  255                  | TOK_PATTERN Identifier

  256 ValueRange: LowerEndValue ConstraintRangeSpec UpperEndValue

  257 LowerEndValue: SingleValue
  258              | TOK_MIN

  259 UpperEndValue: SingleValue
  260              | TOK_MAX

  261 SingleValue: Value

  262 BitStringValue: TOK_bstring
  263               | TOK_hstring

  264 ContainedSubtype: TOK_INCLUDES Type
  265                 | DefinedUntaggedType

  266 InnerTypeConstraints: TOK_WITH TOK_COMPONENT SingleTypeConstraint
  267                     | TOK_WITH TOK_COMPONENTS MultipleTypeConstraints

  268 SingleTypeConstraint: Constraint

  269 MultipleTypeConstraints: FullSpecification
  270                        | PartialSpecification

  271 FullSpecification: '{' TypeConstraints '}'

  272 PartialSpecification: '{' "..." ',' TypeConstraints '}'

  273 TypeConstraints: NamedConstraint
  274                | TypeConstraints ',' NamedConstraint

  275 NamedConstraint: IdentifierAsValue optConstraint optPresenceConstraint

  276 optPresenceConstraint: /* empty */
  277                      | PresenceConstraint

  278 PresenceConstraint: TOK_PRESENT
  279                   | TOK_ABSENT
  280                   | TOK_OPTIONAL

  281 GeneralConstraint: UserDefinedConstraint
  282                  | TableConstraint
  283                  | ContentsConstraint

  284 @5: /* empty */

  285 UserDefinedConstraint: TOK_CONSTRAINED TOK_BY '{' @5 Opaque

  286 ContentsConstraint: TOK_CONTAINING Type

  287 ConstraintRangeSpec: ".."
  288                    | ".." '<'
  289                    | '<' ".."
  290                    | '<' ".." '<'

  291 TableConstraint: SimpleTableConstraint
  292                | ComponentRelationConstraint

  293 SimpleTableConstraint: '{' TypeRefName '}'

  294 ComponentRelationConstraint: SimpleTableConstraint '{' AtNotationList '}'

  295 AtNotationList: AtNotationElement
  296               | AtNotationList ',' AtNotationElement

  297 AtNotationElement: '@' ComponentIdList
  298                  | '@' '.' ComponentIdList

  299 ComponentIdList: Identifier
  300                | ComponentIdList '.' Identifier

  301 optMarker: /* empty */
  302          | Marker

  303 Marker: TOK_OPTIONAL
  304       | TOK_DEFAULT Value

  305 IdentifierList: IdentifierElement
  306               | IdentifierList ',' IdentifierElement

  307 IdentifierElement: Identifier

  308 NamedNumberList: NamedNumber
  309                | NamedNumberList ',' NamedNumber

  310 NamedNumber: Identifier '(' SignedNumber ')'
  311            | Identifier '(' DefinedValue ')'

  312 NamedBitList: NamedBit
  313             | NamedBitList ',' NamedBit

  314 NamedBit: Identifier '(' "number" ')'
  315         | Identifier '(' DefinedValue ')'

  316 Enumerations: UniverationList

  317 UniverationList: UniverationElement
  318                | UniverationList ',' UniverationElement

  319 UniverationElement: Identifier
  320                   | Identifier '(' SignedNumber ')'
  321                   | Identifier '(' DefinedValue ')'
  322                   | SignedNumber
  323                   | "..."

  324 SignedNumber: "number"
  325             | "negative number"

  326 RealValue: TOK_realnumber

  327 optTag: /* empty */
  328       | Tag

  329 Tag: TagTypeValue TagPlicit

  330 TagTypeValue: '[' TagClass "number" ']'

  331 TagClass: /* empty */
  332         | TOK_UNIVERSAL
  333         | TOK_APPLICATION
  334         | TOK_PRIVATE

  335 TagPlicit: /* empty */
  336          | TOK_IMPLICIT
  337          | TOK_EXPLICIT

  338 TypeRefName: TOK_typereference
  339            | TOK_capitalreference

  340 optIdentifier: /* empty */
  341              | Identifier

  342 Identifier: "identifier"

  343 IdentifierAsReference: Identifier

  344 IdentifierAsValue: IdentifierAsReference


Terminals, with rules where they appear

$end (0) 0
'!' (33) 123 124
'(' (40) 14 225 244 310 311 314 315 320 321
')' (41) 14 225 244 310 311 314 315 320 321
',' (44) 50 60 73 80 88 89 95 96 104 233 234 272 274 296 306 309 313
    318
'.' (46) 145 146 147 149 154 155 170 298 300
':' (58) 75 76 77 78
';' (59) 38 56 57 58
'<' (60) 288 289 290
'@' (64) 297 298
'[' (91) 121 330
']' (93) 121 330
'^' (94) 216
'{' (123) 9 10 52 62 64 67 70 71 100 115 135 136 137 161 195 196 197
    198 199 271 272 285 293 294
'|' (124) 214
'}' (125) 9 10 52 62 64 67 70 71 100 115 135 136 137 195 196 197 198
    199 271 272 293 294
error (256)
TOK_PPEQ (258) 6 65 68 69 70 71 157
TOK_VBracketLeft (259) 89 96
TOK_VBracketRight (260) 89 96
TOK_whitespace (261) 118
TOK_opaque (262) 175 176
TOK_bstring (263) 262
TOK_cstring (264) 171 254
TOK_hstring (265) 263
"identifier" (266) 342
"number" (267) 14 15 314 324 330
"negative number" (268) 325
TOK_realnumber (269) 326
TOK_tuple (270) 172
TOK_quadruple (271) 173
TOK_typereference (272) 143 145 338
TOK_capitalreference (273) 24 34 144 146 147 156 339
TOK_typefieldreference (274) 105 109 110 111 151 153 154
TOK_valuefieldreference (275) 106 107 108 152 155
TOK_Literal (276) 119
TOK_ExtValue_BIT_STRING (277) 198 199
TOK_ABSENT (278) 279
TOK_ABSTRACT_SYNTAX (279)
TOK_ALL (280) 57 236
TOK_ANY (281) 140 141
TOK_APPLICATION (282) 333
TOK_AUTOMATIC (283) 22
TOK_BEGIN (284) 6
TOK_BIT (285) 193 197
TOK_BMPString (286) 200
TOK_BOOLEAN (287) 178
TOK_BY (288) 141 285
TOK_CHARACTER (289) 186
TOK_CHOICE (290) 135
TOK_CLASS (291) 100
TOK_COMPONENT (292) 266
TOK_COMPONENTS (293) 92 267
TOK_CONSTRAINED (294) 285
TOK_CONTAINING (295) 286
TOK_DEFAULT (296) 304
TOK_DEFINITIONS (297) 6
TOK_DEFINED (298) 141
TOK_EMBEDDED (299) 185
TOK_ENCODED (300)
TOK_ENCODING_CONTROL (301) 34
TOK_END (302) 6
TOK_ENUMERATED (303) 192 196
TOK_EXPLICIT (304) 20 337
TOK_EXPORTS (305) 56 57 58
TOK_EXTENSIBILITY (306) 23
TOK_EXTERNAL (307) 184
TOK_FALSE (308) 163
TOK_FROM (309) 39 46 252
TOK_GeneralizedTime (310) 188
TOK_GeneralString (311) 201
TOK_GraphicString (312) 202
TOK_IA5String (313) 203
TOK_IDENTIFIER (314) 182
TOK_IMPLICIT (315) 21 336
TOK_IMPLIED (316) 23
TOK_IMPORTS (317) 38 39
TOK_INCLUDES (318) 264
TOK_INSTANCE (319) 142
TOK_INSTRUCTIONS (320) 24
TOK_INTEGER (321) 191 195
TOK_ISO646String (322) 204
TOK_MAX (323) 260
TOK_MIN (324) 258
TOK_MINUS_INFINITY (325)
TOK_NULL (326) 162 179
TOK_NumericString (327) 205
TOK_OBJECT (328) 182
TOK_ObjectDescriptor (329) 213
TOK_OCTET (330) 181
TOK_OF (331) 92 138 139 142
TOK_OPTIONAL (332) 280 303
TOK_PATTERN (333) 254 255
TOK_PDV (334) 185
TOK_PLUS_INFINITY (335)
TOK_PRESENT (336) 278
TOK_PrintableString (337) 206
TOK_PRIVATE (338) 334
TOK_REAL (339) 180
TOK_RELATIVE_OID (340) 183
TOK_SEQUENCE (341) 136 138
TOK_SET (342) 137 139
TOK_SIZE (343) 253
TOK_STRING (344) 181 186 193 197
TOK_SYNTAX (345) 115
TOK_T61String (346) 207
TOK_TAGS (347) 20 21 22
TOK_TeletexString (348) 208
TOK_TRUE (349) 164
TOK_TYPE_IDENTIFIER (350)
TOK_UNIQUE (351) 102
TOK_UNIVERSAL (352) 332
TOK_UniversalString (353) 209
TOK_UTCTime (354) 187
TOK_UTF8String (355) 210
TOK_VideotexString (356) 211
TOK_VisibleString (357) 212
TOK_WITH (358) 48 115 266 267
TOK_SUCCESSORS (359) 48
"UTF-8 byte order mark" (360) 1
TOK_EXCEPT (361) 236 242
TOK_INTERSECTION (362) 217
TOK_UNION (363) 215
".." (364) 287 288 289 290
"..." (365) 122 123 124 231 233 234 272 323
"concrete TypeDeclaration" (366)


Nonterminals, with rules where they appear

$accept (127)
    on left: 0
ParsedGrammar (128)
    on left: 1 2, on right: 0
ModuleList (129)
    on left: 3 4, on right: 1 2 4
ModuleDefinition (130)
    on left: 6, on right: 3 4
@1 (131)
    on left: 5, on right: 6
optObjectIdentifier (132)
    on left: 7 8, on right: 6
ObjectIdentifier (133)
    on left: 9 10, on right: 8 45
ObjectIdentifierBody (134)
    on left: 11 12, on right: 9 12
ObjectIdentifierElement (135)
    on left: 13 14 15, on right: 11 12
optModuleDefinitionFlags (136)
    on left: 16 17, on right: 6
ModuleDefinitionFlags (137)
    on left: 18 19, on right: 17 19
ModuleDefinitionFlag (138)
    on left: 20 21 22 23 24, on right: 18 19
optModuleBody (139)
    on left: 25 26, on right: 6
ModuleBody (140)
    on left: 27, on right: 26
AssignmentList (141)
    on left: 28 29, on right: 27 29
Assignment (142)
    on left: 30 31 32 34 35, on right: 28 29
@2 (143)
    on left: 33, on right: 34
optImports (144)
    on left: 36 37, on right: 27
ImportsDefinition (145)
    on left: 38 39, on right: 37
optImportsBundleSet (146)
    on left: 40 41, on right: 38
ImportsBundleSet (147)
    on left: 42 43, on right: 41 43
AssignedIdentifier (148)
    on left: 44 45, on right: 46
ImportsBundle (149)
    on left: 46, on right: 42 43
optWithSuccessors (150)
    on left: 47 48, on right: 46
ImportsList (151)
    on left: 49 50, on right: 46 50
ImportsElement (152)
    on left: 51 52 53, on right: 49 50
optExports (153)
    on left: 54 55, on right: 27
ExportsDefinition (154)
    on left: 56 57 58, on right: 55
ExportsBody (155)
    on left: 59 60, on right: 56 60
ExportsElement (156)
    on left: 61 62 63, on right: 59 60
ValueSet (157)
    on left: 64, on right: 65 84
ValueSetTypeAssignment (158)
    on left: 65, on right: 32
DefinedType (159)
    on left: 66 67, on right: 127 133
DataTypeReference (160)
    on left: 68 69 70 71, on right: 30
ParameterArgumentList (161)
    on left: 72 73, on right: 70 71 73
ParameterArgumentName (162)
    on left: 74 75 76 77 78, on right: 72 73
ActualParameterList (163)
    on left: 79 80, on right: 67 80
ActualParameter (164)
    on left: 81 82 83 84, on right: 79 80
optComponentTypeLists (165)
    on left: 85 86, on right: 136 137
ComponentTypeLists (166)
    on left: 87 88 89, on right: 86 88 89
ComponentType (167)
    on left: 90 91 92 93, on right: 87 88
AlternativeTypeLists (168)
    on left: 94 95 96, on right: 95 96 135
AlternativeType (169)
    on left: 97 98 99, on right: 94 95
ObjectClass (170)
    on left: 100, on right: 69 71
optUNIQUE (171)
    on left: 101 102, on right: 106
FieldSpec (172)
    on left: 103 104, on right: 100 104
ClassField (173)
    on left: 105 106 107 108 109 110 111, on right: 103 104
optWithSyntax (174)
    on left: 112 113, on right: 100
WithSyntax (175)
    on left: 115, on right: 113
@3 (176)
    on left: 114, on right: 115
WithSyntaxList (177)
    on left: 116 117, on right: 115 117 121
WithSyntaxToken (178)
    on left: 118 119 120 121, on right: 116 117
ExtensionAndException (179)
    on left: 122 123 124, on right: 93 98
Type (180)
    on left: 125, on right: 65 68 70 106 110 157 264 286
TaggedType (181)
    on left: 126, on right: 125
DefinedUntaggedType (182)
    on left: 127, on right: 265
UntaggedType (183)
    on left: 128, on right: 81 126
MaybeIndirectTaggedType (184)
    on left: 129, on right: 90 91 92 97 99
NSTD_IndirectMarker (185)
    on left: 130, on right: 131
MaybeIndirectTypeDeclaration (186)
    on left: 131, on right: 129 138 139
TypeDeclaration (187)
    on left: 132 133, on right: 128 131
ConcreteTypeDeclaration (188)
    on left: 134 135 136 137 138 139 140 141 142, on right: 132
ComplexTypeReference (189)
    on left: 143 144 145 146 147, on right: 66 67 142
ComplexTypeReferenceAmpList (190)
    on left: 148 149, on right: 147 149
ComplexTypeReferenceElement (191)
    on left: 150, on right: 148 149
PrimitiveFieldReference (192)
    on left: 151 152, on right: 120 150
FieldName (193)
    on left: 153 154 155, on right: 107 109 154 155
DefinedObjectClass (194)
    on left: 156, on right: 108 111
ValueAssignment (195)
    on left: 157, on right: 31
Value (196)
    on left: 158 159 161, on right: 157 261 304
@4 (197)
    on left: 160, on right: 161
SimpleValue (198)
    on left: 162 163 164 165 166 167 168, on right: 82 158
DefinedValue (199)
    on left: 169 170, on right: 83 123 159 311 315 321
RestrictedCharacterStringValue (200)
    on left: 171 172 173, on right: 167
Opaque (201)
    on left: 174 175, on right: 161 175 285
OpaqueFirstToken (202)
    on left: 176 177, on right: 174
BasicTypeId (203)
    on left: 178 179 180 181 182 183 184 185 186 187 188 189 190,
    on right: 77 78 194
BasicTypeId_UniverationCompatible (204)
    on left: 191 192 193, on right: 190
BuiltinType (205)
    on left: 194 195 196 197 198 199, on right: 134
BasicString (206)
    on left: 200 201 202 203 204 205 206 207 208 209 210 211 212 213
   , on right: 35 189
UnionMark (207)
    on left: 214 215, on right: 238
IntersectionMark (208)
    on left: 216 217, on right: 240
optConstraint (209)
    on left: 218 219, on right: 275
optManyConstraints (210)
    on left: 220 221, on right: 127 128 129
optSizeOrConstraint (211)
    on left: 222 223 224, on right: 138 139
Constraint (212)
    on left: 225, on right: 219 223 226 227 252 253 268
ManyConstraints (213)
    on left: 226 227, on right: 221 227
ConstraintSpec (214)
    on left: 228 229, on right: 225
SubtypeConstraint (215)
    on left: 230, on right: 228
ElementSetSpecs (216)
    on left: 231 232 233 234, on right: 64 230
ElementSetSpec (217)
    on left: 235 236, on right: 232 233 234 244
Unions (218)
    on left: 237 238, on right: 235 238
Intersections (219)
    on left: 239 240, on right: 237 238 240
IntersectionElements (220)
    on left: 241 242, on right: 239 240
Elements (221)
    on left: 243 244, on right: 236 241 242
SubtypeElements (222)
    on left: 245 246 247 248 249 250 251, on right: 243
PermittedAlphabet (223)
    on left: 252, on right: 247
SizeConstraint (224)
    on left: 253, on right: 224 248
PatternConstraint (225)
    on left: 254 255, on right: 250
ValueRange (226)
    on left: 256, on right: 251
LowerEndValue (227)
    on left: 257 258, on right: 256
UpperEndValue (228)
    on left: 259 260, on right: 256
SingleValue (229)
    on left: 261, on right: 245 257 259
BitStringValue (230)
    on left: 262 263, on right: 168
ContainedSubtype (231)
    on left: 264 265, on right: 246
InnerTypeConstraints (232)
    on left: 266 267, on right: 249
SingleTypeConstraint (233)
    on left: 268, on right: 266
MultipleTypeConstraints (234)
    on left: 269 270, on right: 267
FullSpecification (235)
    on left: 271, on right: 269
PartialSpecification (236)
    on left: 272, on right: 270
TypeConstraints (237)
    on left: 273 274, on right: 271 272 274
NamedConstraint (238)
    on left: 275, on right: 273 274
optPresenceConstraint (239)
    on left: 276 277, on right: 275
PresenceConstraint (240)
    on left: 278 279 280, on right: 277
GeneralConstraint (241)
    on left: 281 282 283, on right: 229
UserDefinedConstraint (242)
    on left: 285, on right: 281
@5 (243)
    on left: 284, on right: 285
ContentsConstraint (244)
    on left: 286, on right: 283
ConstraintRangeSpec (245)
    on left: 287 288 289 290, on right: 256
TableConstraint (246)
    on left: 291 292, on right: 282
SimpleTableConstraint (247)
    on left: 293, on right: 291 294
ComponentRelationConstraint (248)
    on left: 294, on right: 292
AtNotationList (249)
    on left: 295 296, on right: 294 296
AtNotationElement (250)
    on left: 297 298, on right: 295 296
ComponentIdList (251)
    on left: 299 300, on right: 297 298 300
optMarker (252)
    on left: 301 302, on right: 90 91 105 106 107 108 109 110 111
Marker (253)
    on left: 303 304, on right: 302
IdentifierList (254)
    on left: 305 306, on right: 198 306
IdentifierElement (255)
    on left: 307, on right: 305 306
NamedNumberList (256)
    on left: 308 309, on right: 195 309
NamedNumber (257)
    on left: 310 311, on right: 308 309
NamedBitList (258)
    on left: 312 313, on right: 197 313
NamedBit (259)
    on left: 314 315, on right: 312 313
Enumerations (260)
    on left: 316, on right: 196
UniverationList (261)
    on left: 317 318, on right: 316 318
UniverationElement (262)
    on left: 319 320 321 322 323, on right: 317 318
SignedNumber (263)
    on left: 324 325, on right: 124 165 310 320 322
RealValue (264)
    on left: 326, on right: 166
optTag (265)
    on left: 327 328, on right: 126 129 138 139
Tag (266)
    on left: 329, on right: 328
TagTypeValue (267)
    on left: 330, on right: 329
TagClass (268)
    on left: 331 332 333 334, on right: 330
TagPlicit (269)
    on left: 335 336 337, on right: 329
TypeRefName (270)
    on left: 338 339, on right: 6 46 51 52 61 62 65 68 69 70 71 74
    75 76 78 145 146 170 293
optIdentifier (271)
    on left: 340 341, on right: 138 139
Identifier (272)
    on left: 342, on right: 13 14 53 63 75 77 90 97 141 157 170 177
    255 299 300 307 310 311 314 315 319 320 321 341 343
IdentifierAsReference (273)
    on left: 343, on right: 344
IdentifierAsValue (274)
    on left: 344, on right: 169 275


state 0

    0 $accept: . ParsedGrammar $end

    TOK_typereference        shift, and go to state 1
    TOK_capitalreference     shift, and go to state 2
    "UTF-8 byte order mark"  shift, and go to state 3

    ParsedGrammar     go to state 4
    ModuleList        go to state 5
    ModuleDefinition  go to state 6
    TypeRefName       go to state 7


state 1

  338 TypeRefName: TOK_typereference .

    $default  reduce using rule 338 (TypeRefName)


state 2

  339 TypeRefName: TOK_capitalreference .

    $default  reduce using rule 339 (TypeRefName)


state 3

    1 ParsedGrammar: "UTF-8 byte order mark" . ModuleList

    TOK_typereference     shift, and go to state 1
    TOK_capitalreference  shift, and go to state 2

    ModuleList        go to state 8
    ModuleDefinition  go to state 6
    TypeRefName       go to state 7


state 4

    0 $accept: ParsedGrammar . $end

    $end  shift, and go to state 9


state 5

    2 ParsedGrammar: ModuleList .
    4 ModuleList: ModuleList . ModuleDefinition

    TOK_typereference     shift, and go to state 1
    TOK_capitalreference  shift, and go to state 2

    $default  reduce using rule 2 (ParsedGrammar)

    ModuleDefinition  go to state 10
    TypeRefName       go to state 7


state 6

    3 ModuleList: ModuleDefinition .

    $default  reduce using rule 3 (ModuleList)


state 7

    6 ModuleDefinition: TypeRefName . @1 optObjectIdentifier TOK_DEFINITIONS optModuleDefinitionFlags TOK_PPEQ TOK_BEGIN optModuleBody TOK_END

    $default  reduce using rule 5 (@1)

    @1  go to state 11


state 8

    1 ParsedGrammar: "UTF-8 byte order mark" ModuleList .
    4 ModuleList: ModuleList . ModuleDefinition

    TOK_typereference     shift, and go to state 1
    TOK_capitalreference  shift, and go to state 2

    $default  reduce using rule 1 (ParsedGrammar)

    ModuleDefinition  go to state 10
    TypeRefName       go to state 7


state 9

    0 $accept: ParsedGrammar $end .

    $default  accept


state 10

    4 ModuleList: ModuleList ModuleDefinition .

    $default  reduce using rule 4 (ModuleList)


state 11

    6 ModuleDefinition: TypeRefName @1 . optObjectIdentifier TOK_DEFINITIONS optModuleDefinitionFlags TOK_PPEQ TOK_BEGIN optModuleBody TOK_END

    '{'  shift, and go to state 12

    $default  reduce using rule 7 (optObjectIdentifier)

    optObjectIdentifier  go to state 13
    ObjectIdentifier     go to state 14


state 12

    9 ObjectIdentifier: '{' . ObjectIdentifierBody '}'
   10                 | '{' . '}'

    "identifier"  shift, and go to state 15
    "number"      shift, and go to state 16
    '}'           shift, and go to state 17
